Adjust core module for Vert.x 5